@@ -28,3 +28,7 @@ Changelog:
 - Reworked and reordered the Airsonic installer to actually account for file placement order, user creation and java presence.
 02-12-2024: 0.6.2.1:
 - Replaced Skype with Zoom and Teams with Slack. (hardcoded, sadly)
+02-12-2024: 0.6.3:
+- Typos and oversights
+- Added Docker capability in a function for easy access.
+- Added Pi-Hole (Preconfiguration required with /etc/pihole/setupVars.conf, see mentioned URL.)
